--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ on: [push]
 
 jobs:
   hello_world_job:
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
     name: A job to say hello
     steps: 
     - name: Hello world action step
